# Cpp

./: .gitignore
C++/Programas/: 2_tipos_de_dato.cpp  CMakeLists.txt  main.cpp
C++/Teoria/1.-Conceptos Basicos/Apuntes/: 2.-Variables.cpp  Entrada.cpp
Ejericios/: 1_tickets_autobus.cpp  2_contador.cpp  3_boletos_feria.cpp  4_palindromos.cpp  5_colas.cpp  6_colas_sobrecargadas.cpp  7_cola_nueva.cpp  8_plantilla_colas.cpp
Ejericios/EPN/: 14022017_correccion.cpp  Examen_final.cpp  examen1_Pizarra_Jhonathan.cpp  prueba3.cpp  prueba4.cpp  supletorio_Pizarra_Jhonathan.cpp
Ejericios/EPN/Actuaciones/PBimestre/: 16112016_1.cpp  16112016_2.cpp  16112016_3.cpp  21112016.cpp  (+10 more)
Programas/: 10_punteros.cpp  11_operaciones_punteros.cpp  12_memoria.cpp  13_operador_sizeof.cpp  14_funciones.cpp  16_parametros.cpp  17_parametros_multiples.cpp  18_random.cpp  19_srandom.cpp  1_holaMundo.cpp  20_truly_randoms.cpp  21_parametos_inicializados.cpp  22_overloading.cpp  23_recursividad.cpp  24_arrays_functions.cpp  25_funciones_refers.cpp  26_classes.cpp  27_identificador_acceso.cpp  28_metodos_publicos.cpp  29_contructores.cpp  2_variables_y_tipos_de_dato.cpp  30_contructor_iniciado.cpp  31_clases_separadas.cpp  32_destructor.cpp  33_objeto_memoria.cpp  34_composition.cpp  35_friend_function.cpp  36_this.cpp  37_overload.cpp  38_herencia.cpp  39_herencia_contructores.cpp  3_entradas_y_salidas.cpp  40_polimorfismo.cpp  41_funcion_virtual.cpp  42_funcion_virtual_pura.cpp  43_templates.cpp  44_templates_multiple.cpp  45_template_class.cpp  46_template_specialization.cpp  48_hanlde_errors.cpp  (+15 more)
(+75 files in other folders)
