cmake_minimum_required(VERSION 3.15)
project(Programas)

set(CMAKE_CXX_STANDARD 14)

add_executable(Programas
        1_holaMundo.cpp
        2_variables_y_tipos_de_dato.cpp
        3_entradas_y_salidas.cpp
        4_operadores.cpp
        5_condicionales.cpp
        6_bucles.cpp
        7_arrays.cpp
        8_arrays_loops.cpp
        9_matrices.cpp
        10_punteros.cpp 11_operaciones_punteros.cpp 12_memoria.cpp 13_operador_sizeof.cpp 14_funciones.cpp 15_prototipos.cpp 16_parametros.cpp 17_parametros_multiples.cpp 18_random.cpp 19_srandom.cpp 20_truly_randoms.cpp 21_parametos_inicializados.cpp 22_overloading.cpp 23_recursividad.cpp 24_arrays_functions.cpp 25_funciones_refers.cpp 26_classes.cpp 27_identificador_acceso.cpp 28_metodos_publicos.cpp 29_contructores.cpp 30_contructor_iniciado.cpp 31_clases_separadas.cpp MyClass.cpp MyClass.h 32_destructor.cpp Selectores.cpp Selectores.h 33_objeto_memoria.cpp Constantes.cpp Constantes.h Miembros.cpp Miembros.h 34_composition.cpp 35_friend_function.cpp 36_this.cpp 37_overload.cpp 38_herencia.cpp 39_herencia_contructores.cpp 40_polimorfismo.cpp 41_funcion_virtual.cpp 42_funcion_virtual_pura.cpp 43_templates.cpp 44_templates_multiple.cpp 45_template_class.cpp 46_template_specialization.cpp 47_try_catch.cpp 48_hanlde_errors.cpp 49_files.cpp)